crates/swc_ecma_parser/tests/test262-error-references/fail/618f5bdbe9497960.js.stderr
error: Legacy octal escape is not permitted in strict mode
 --> $DIR/tests/test262-parser/fail/618f5bdbe9497960.js:1:17
  |
1 | 'use strict'; ('\11')
  |                 ^^

